# portfolio1

./: .bazelrc  .gitignore  MODULE.bazel  README.md  TEST_RESULTS.md  WORKSPACE
backend/: BUILD  build.sbt
backend/src/main/resources/: application.conf
backend/src/main/scala/com/taskmanagement/: Main.scala
backend/src/main/scala/com/taskmanagement/api/: JsonProtocols.scala  Routes.scala
backend/src/main/scala/com/taskmanagement/auth/: JwtAuthenticationHandler.scala
backend/src/main/scala/com/taskmanagement/db/: DatabaseSchema.scala
backend/src/main/scala/com/taskmanagement/models/: Models.scala
backend/src/main/scala/com/taskmanagement/services/: AuthenticationService.scala  ProjectManagementService.scala  TaskManagementService.scala
database/: schema.sql
docs/: ARCHITECTURE.md  ASANA_PHILOSOPHY.md  BAZEL_GUIDE.md  CODING_GUIDELINES.md  DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md
mobile/: BUILD  package-lock.json  package.json
web/: BUILD  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx
web/src/api/: client.ts
web/src/pages/: DashboardPage.tsx  LoginPage.tsx  ProjectsPage.tsx  RegisterPage.tsx  TasksPage.tsx
