module(
    name = "portfolio1",
    version = "0.1.0",
)

bazel_dep(name = "rules_scala", version = "7.0.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")

# Maven Dependency bzlmod
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven_portfolio",
    artifacts = [
        # Pekko HTTP
        "org.apache.pekko:pekko-actor_2.13:1.0.3",
        "org.apache.pekko:pekko-actor-typed_2.13:1.0.3",
        "org.apache.pekko:pekko-stream_2.13:1.0.3",
        "org.apache.pekko:pekko-http-core_2.13:1.0.1",
        "org.apache.pekko:pekko-http_2.13:1.0.1",
        "org.apache.pekko:pekko-http-spray-json_2.13:1.0.1",
        "io.spray:spray-json_2.13:1.3.6",
        
        # Slick
        "com.typesafe.slick:slick_2.13:3.5.0",
        "com.typesafe.slick:slick-hikaricp_2.13:3.5.0",
        
        # PostgreSQL
        "org.postgresql:postgresql:42.7.1",
        
        # JWT
        "com.github.jwt-scala:jwt-core_2.13:9.4.5",
        
        # BCrypt
        "org.mindrot:jbcrypt:0.4",
        
        # Logging
        "ch.qos.logback:logback-classic:1.4.14",
        "com.typesafe.scala-logging:scala-logging_2.13:3.9.5",
        
        # Config
        "com.typesafe:config:1.4.3",
        
        # Testing
        "org.scalatest:scalatest_2.13:3.2.17",
        "org.apache.pekko:pekko-http-testkit_2.13:1.0.1",
        "org.apache.pekko:pekko-actor-testkit-typed_2.13:1.0.3",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

# publish @maven_portfolio
use_repo(maven, "maven_portfolio")

# stick the scala version
scala_config = use_extension("@rules_scala//scala/extensions:config.bzl", "scala_config")
scala_config.settings(scala_version = "2.13.16")

# publish scala tool chain
scala_deps = use_extension("@rules_scala//scala/extensions:deps.bzl", "scala_deps")
scala_deps.scala()
